--- a/frontEnd/src/containers/userProfile/tabs/comments/comments.module.css
+++ b/frontEnd/src/containers/userProfile/tabs/comments/comments.module.css
@@ -60,7 +60,7 @@
     position: absolute;
     width: 20px;
     top: 7px;
-    right: 110px;
+    right: 140px;
     cursor: pointer;
 }
 
